--- a/src/index.html
+++ b/src/index.html
@@ -2,25 +2,48 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <title>Ionic App</title>
+    <meta charset="utf-8" />
+    <title>Ionic App</title>
 
-  <base href="/" />
+    <base href="/" />
 
-  <meta name="color-scheme" content="light dark" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="msapplication-tap-highlight" content="no" />
+    <meta name="color-scheme" content="light dark" />
+    <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+    <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
 
   <!-- add to homescreen for ios -->
   <meta name="mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  
+  <!-- jeep-sqlite for web platform -->
+  <script type="module" src="assets/jeep-sqlite/jeep-sqlite.esm.js"></script>
+  <script>
+    // Wait for jeep-sqlite to be defined before Angular bootstraps
+    window.addEventListener('DOMContentLoaded', () => {
+      console.log('DOMContentLoaded - Checking jeep-sqlite...');
+      const checkJeepSqlite = setInterval(() => {
+        const jeepElement = document.querySelector('jeep-sqlite');
+        const isDefined = customElements.get('jeep-sqlite');
+        console.log('jeep-sqlite check - Element in DOM:', !!jeepElement, 'Custom element defined:', !!isDefined);
+        
+        if (jeepElement && isDefined) {
+          console.log('jeep-sqlite is ready!');
+          clearInterval(checkJeepSqlite);
+        }
+      }, 100);
+      
+      // Stop checking after 10 seconds
+      setTimeout(() => clearInterval(checkJeepSqlite), 10000);
+    });
+  </script>
 </head>
 
 <body>
-  <app-root></app-root>
+    <jeep-sqlite autoSave="true" wasmPath="/assets"></jeep-sqlite>
+    <app-root></app-root>
 </body>
 
 </html>
